fixed weekly date alignment

--- a/src/style.css
+++ b/src/style.css
@@ -291,6 +291,7 @@
     }
     .wkTimeContainer {
         grid-area: wtim;
+        padding-left: 10px;
     }
     .weeklyWeatherImageSection {
         grid-area: wicn;
